--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -1,5 +1,6 @@
 backend:
   name: git-gateway
+  repo: thetechnohack/static-site
   branch: main
 publish_mode: editorial_workflow
 media_folder: "static/images" # Folder where user uploaded files should go
